[package]
name = "project"
version = "0.1.0"
authors = ["Mia Kramer <miakra@cs.ubc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15"
smallvec = "1"
smol_str = "0.1"
ndarray = "*"
num-traits = "0.2"
lazy_static = "*"
serde_json = "*"
ansi_term = "0.12"
rand = "0.8"
rand_distr = "0.4"
libc = "*"
special = "*"