[package]
name = "common"
version = "0.1.0"
authors = ["Mia Kramer <miakra@cs.ubc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
ndarray = {version = "*", features=["serde"]}
im = {version = "15", features=["serde"] }
num-traits = "*"
serde = { version = "1", features=["derive"] }
rand = "0.8"
rand_distr = "0.4"
smallvec = {version = "1", features=["serde"] }
smol_str = {version="*", features=["serde"]}