[package]
name = "compiler"
version = "0.1.0"
authors = ["Mia Kramer <miakra@cs.ubc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
smol_str = "*"
common = {path = "../common"}
smallvec = "1"
typed-arena = "2"
im = "15"