[package]
name = "compiler"
version = "0.1.0"
authors = ["Mia Kramer <miakra@cs.ubc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
smol_str = {version="*", features=["serde"]}
common = {path = "../common"}
smallvec = {version = "1", features=["serde"] }
im = {version = "15", features=["serde"] }
ndarray = {version = "*", features=["serde"]}
serde = { version = "1", features=["derive"] }
bincode = "1"