[package]
name = "evaluator"
version = "0.1.0"
authors = ["Mia Kramer <miakra@cs.ubc.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = {version = "15", features=["serde"] }
smallvec = "1"
smol_str = "0.1"
ndarray = {version = "*", features=["serde"]}
ndarray-npy = "*"
num-traits = "0.2"
rand = "0.8"
rand_distr = "0.4"
libc = "*"
special = "*"
serde = { version = "1", features=["derive"] }